tests/NormalTests/paczka1/fuzzy1/24057204.err
Error in line 1: 3ijH S536 84,2
Error in line 9: pPUmu8 A35 45,3
Error in line 12: pPUmu8A78888,4
Error in line 7: 3ijH A35 76,3
Error in line 26: lompJoCIu6D A788 160,06
Error in line 35: lompJoCIu6D A952 11,34
Error in line 21: lompJoCIu6D A788 61,3
Error in line 36: lompJoCIu6D A952 17,4
